added edit functionality to task boxes

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -20,6 +20,7 @@
     />
     <link rel="stylesheet" href="style.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script type="text/javascript">
       var date = (moment().format('LL'));
     </script>
@@ -35,105 +36,104 @@
     <div class="container">
       <!-- Timeblocks go here -->
       <div class="row time-block">
-        <div class="col-sm-2">
+        <div class="col-sm-2 card">
           <p>9 AM</p>
         </div>
-        <div class="col-sm-8">
-          <p class="description text-area"></p>
+        <div class="col-sm-8 card text-area">
+          <p class="description" id="text-area">Click Here to Edit Task</p>
         </div>
-        <div class="col-sm-2">
+        <div class="col-sm-2 card">
           <button type="button" class="saveBtn btn-info" id="save">Save</button>
         </div>
       </div>
       <div class="row time-block">
-        <div class="col-sm-2">
+        <div class="col-sm-2 card">
           <p>10 AM</p>
         </div>
-        <div class="col-sm-8">
-          <p class="description text-area"></p>
+        <div class="col-sm-8 card text-area">
+          <p class="description" id="text-area">Click Here to Edit Task</p>
         </div>
-        <div class="col-sm-2">
+        <div class="col-sm-2 card">
           <button type="button" class="saveBtn btn-info" id="save">Save</button>
         </div>
       </div>
       <div class="row time-block">
-        <div class="col-sm-2">
+        <div class="col-sm-2 card">
           <p>11 AM</p>
         </div>
-        <div class="col-sm-8">
-          <p class="description text-area"></p>
+        <div class="col-sm-8 card text-area">
+          <p class="description" id="text-area">Click Here to Edit Task</p>
         </div>
-        <div class="col-sm-2">
+        <div class="col-sm-2 card">
           <button type="button" class="saveBtn btn-info" id="save">Save</button>
         </div>
       </div>
       <div class="row time-block">
-        <div class="col-sm-2">
+        <div class="col-sm-2 card">
           <p>12 PM</p>
         </div>
-        <div class="col-sm-8">
-          <p class="description text-area"></p>
+        <div class="col-sm-8 card text-area">
+          <p class="description" id="text-area">Click Here to Edit Task</p>
         </div>
-        <div class="col-sm-2">
+        <div class="col-sm-2 card">
           <button type="button" class="saveBtn btn-info" id="save">Save</button>
         </div>
       </div>
       <div class="row time-block">
-        <div class="col-sm-2">
+        <div class="col-sm-2 card">
           <p>1 PM</p>
         </div>
-        <div class="col-sm-8">
-          <p class="description text-area"></p>
+        <div class="col-sm-8 card text-area">
+          <p class="description" id="text-area">Click Here to Edit Task</p>
         </div>
-        <div class="col-sm-2">
+        <div class="col-sm-2 card">
           <button type="button" class="saveBtn btn-info" id="save">Save</button>
         </div>
       </div>
       <div class="row time-block">
-        <div class="col-sm-2">
+        <div class="col-sm-2 card">
           <p>2 PM</p>
         </div>
-        <div class="col-sm-8">
-          <p class="description text-area"></p>
+        <div class="col-sm-8 card text-area">
+          <p class="description" id="text-area">Click Here to Edit Task</p>
         </div>
-        <div class="col-sm-2">
+        <div class="col-sm-2 card">
           <button type="button" class="saveBtn btn-info" id="save">Save</button>
         </div>
       </div>
       <div class="row time-block">
-        <div class="col-sm-2">
+        <div class="col-sm-2 card">
           <p>3 PM</p>
         </div>
-        <div class="col-sm-8">
-          <p class="description text-area"></p>
+        <div class="col-sm-8 card text-area">
+          <p class="description" id="text-area">Click Here to Edit Task</p>
         </div>
-        <div class="col-sm-2">
+        <div class="col-sm-2 card">
           <button type="button" class="saveBtn btn-info" id="save">Save</button>
         </div>
       </div>
       <div class="row time-block">
-        <div class="col-sm-2">
+        <div class="col-sm-2 card">
           <p>4 PM</p>
         </div>
-        <div class="col-sm-8">
-          <p class="description text-area"></p>
+        <div class="col-sm-8 card text-area">
+          <p class="description" id="text-area">Click Here to Edit Task</p>
         </div>
-        <div class="col-sm-2">
+        <div class="col-sm-2 card">
           <button type="button" class="saveBtn btn-info" id="save">Save</button>
         </div>
       </div>
       <div class="row time-block">
-        <div class="col-sm-2 text-area">
+        <div class="col-sm-2 card">
           <p>5 PM</p>
         </div>
-        <div class="col-sm-8">
-          <p class="description text-area"></p>
+        <div class="col-sm-8 card text-area">
+          <p class="description" id="text-area">Click Here to Edit Task</p>
         </div>
-        <div class="col-sm-2">
+        <div class="col-sm-2 card">
           <button type="button" class="saveBtn btn-info" id="save">Save</button>
         </div>
       </div>
-
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+      <script src="script.js"></script>
   </body>
 </html>
