added dynamic background color to tasks

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -33,107 +33,117 @@
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p class="lead" id="currentDay">Today is <script type="text/javascript">document.write(date)</script>.</p>
     </header>
+
     <div class="container">
       <!-- Timeblocks go here -->
       <div class="row time-block">
         <div class="col-sm-2 card">
-          <p>9 AM</p>
+          <p id="hour">9 AM</p>
         </div>
-        <div class="col-sm-8 card text-area">
-          <p class="description" id="text-area">Click Here to Edit Task</p>
+        <div class="col-sm-8 card description" id="9">
+          <textarea type="text" class="textarea" id="task9"></textarea>
         </div>
         <div class="col-sm-2 card">
           <button type="button" class="saveBtn btn-info" id="save">Save</button>
         </div>
       </div>
+
       <div class="row time-block">
         <div class="col-sm-2 card">
-          <p>10 AM</p>
+          <p id="hour">10 AM</p>
         </div>
-        <div class="col-sm-8 card text-area">
-          <p class="description" id="text-area">Click Here to Edit Task</p>
+        <div class="col-sm-8 card" id="10">
+          <textarea type="text" class="textarea" id="task10"></textarea>
         </div>
         <div class="col-sm-2 card">
           <button type="button" class="saveBtn btn-info" id="save">Save</button>
         </div>
       </div>
+
       <div class="row time-block">
         <div class="col-sm-2 card">
-          <p>11 AM</p>
+          <p id="hour">11 AM</p>
         </div>
-        <div class="col-sm-8 card text-area">
-          <p class="description" id="text-area">Click Here to Edit Task</p>
+        <div class="col-sm-8 card" id="11">
+          <textarea type="text" class="textarea" id="task11"></textarea>
         </div>
         <div class="col-sm-2 card">
           <button type="button" class="saveBtn btn-info" id="save">Save</button>
         </div>
       </div>
+
       <div class="row time-block">
         <div class="col-sm-2 card">
-          <p>12 PM</p>
+          <p id="hour">12 PM</p>
         </div>
-        <div class="col-sm-8 card text-area">
-          <p class="description" id="text-area">Click Here to Edit Task</p>
+        <div class="col-sm-8 card" id="12">
+          <textarea type="text" class="textarea" id="task12"></textarea>
         </div>
         <div class="col-sm-2 card">
           <button type="button" class="saveBtn btn-info" id="save">Save</button>
         </div>
       </div>
+
       <div class="row time-block">
         <div class="col-sm-2 card">
-          <p>1 PM</p>
+          <p id="hour">1 PM</p>
         </div>
-        <div class="col-sm-8 card text-area">
-          <p class="description" id="text-area">Click Here to Edit Task</p>
+        <div class="col-sm-8 card" id="1">
+          <textarea type="text" class="textarea" id="task1"></textarea>
         </div>
         <div class="col-sm-2 card">
           <button type="button" class="saveBtn btn-info" id="save">Save</button>
         </div>
       </div>
+
       <div class="row time-block">
         <div class="col-sm-2 card">
-          <p>2 PM</p>
+          <p id="hour">2 PM</p>
         </div>
-        <div class="col-sm-8 card text-area">
-          <p class="description" id="text-area">Click Here to Edit Task</p>
+        <div class="col-sm-8 card" id="2">
+          <textarea type="text" class="textarea" id="task2"></textarea>
         </div>
         <div class="col-sm-2 card">
           <button type="button" class="saveBtn btn-info" id="save">Save</button>
         </div>
       </div>
+
       <div class="row time-block">
         <div class="col-sm-2 card">
-          <p>3 PM</p>
+          <p id="hour">3 PM</p>
         </div>
-        <div class="col-sm-8 card text-area">
-          <p class="description" id="text-area">Click Here to Edit Task</p>
+        <div class="col-sm-8 card" id="3">
+          <textarea type="text" class="textarea" id="task3"></textarea>
         </div>
         <div class="col-sm-2 card">
           <button type="button" class="saveBtn btn-info" id="save">Save</button>
         </div>
       </div>
+
       <div class="row time-block">
         <div class="col-sm-2 card">
-          <p>4 PM</p>
+          <p id="hour">4 PM</p>
         </div>
-        <div class="col-sm-8 card text-area">
-          <p class="description" id="text-area">Click Here to Edit Task</p>
+        <div class="col-sm-8 card" id="4">
+          <textarea type="text" class="textarea" id="task4"></textarea>
         </div>
         <div class="col-sm-2 card">
           <button type="button" class="saveBtn btn-info" id="save">Save</button>
         </div>
       </div>
+
       <div class="row time-block">
         <div class="col-sm-2 card">
-          <p>5 PM</p>
+          <p id="hour">5 PM</p>
         </div>
-        <div class="col-sm-8 card text-area">
-          <p class="description" id="text-area">Click Here to Edit Task</p>
+        <div class="col-sm-8 card" id="5">
+          <textarea type="text" class="textarea" id="task5"></textarea>
         </div>
         <div class="col-sm-2 card">
           <button type="button" class="saveBtn btn-info" id="save">Save</button>
         </div>
       </div>
+
       <script src="script.js"></script>
   </body>
 </html>
